[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Pipe.gd" type="Script" id=1]
[ext_resource path="res://Assets/cano.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 73.246, 442.885 )

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( 0.210373, -217.488 )
b = Vector2( 0.210373, 198.302 )

[node name="Pipe" type="Node2D"]

position = Vector2( 0, 2.96155 )
script = ExtResource( 1 )

[node name="SpriteDown" type="Sprite" parent="." index="0"]

position = Vector2( 0, 600 )
scale = Vector2( 2, 3.5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="SpriteUp" type="Sprite" parent="." index="1"]

position = Vector2( 0, -600 )
scale = Vector2( 2, 3.5 )
texture = ExtResource( 2 )
flip_v = true
_sections_unfolded = [ "Offset", "Transform" ]

[node name="AreaKill" type="Area2D" parent="." index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="ShapeDown" type="CollisionShape2D" parent="AreaKill" index="0"]

position = Vector2( 0, 600 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="ShapeUp" type="CollisionShape2D" parent="AreaKill" index="1"]

position = Vector2( 0, -600 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="AreaScore" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Shape" type="CollisionShape2D" parent="AreaScore" index="0"]

position = Vector2( 213.158, 18.4211 )
shape = SubResource( 2 )

[connection signal="body_entered" from="AreaKill" to="." method="_on_AreaKill_body_entered"]

[connection signal="body_entered" from="AreaScore" to="." method="_on_AreaScore_body_entered"]


